macchanger (1.5.0-7) UNRELEASED; urgency=low

  * debian/control:
    - updated my email address
    - DMUA removed
    - bump Standards-Version to 3.9.1, no changes needed
    - drop Build-Depends on quilt
  * debian/README.source removed
  * Use "3.0 (quilt)" format

 -- David Paleino <dapal@debian.org>  Fri, 11 Feb 2011 10:38:53 +0100

macchanger (1.5.0-6) unstable; urgency=low

  * The "if I only received those mails five minutes earlier" release
  * debian/patches/:
    - 03-fix_random_seed.patch added, thanks to Carlo Contavalli for
      the hint (Closes: #547595)
    - 04-fix_exit_code.patch added (Closes: #547596)

 -- David Paleino <d.paleino@gmail.com>  Mon, 21 Sep 2009 11:54:29 +0200

macchanger (1.5.0-5) unstable; urgency=low

  * The "fast, fast, you forgot it!" release
  * debian/rules: add "build-stamp" to install-stamp dependencies
  * debian/control: change priority to extra, match FTP-Master override

 -- David Paleino <d.paleino@gmail.com>  Mon, 21 Sep 2009 00:59:02 +0200

macchanger (1.5.0-4) unstable; urgency=low

  * Maintenance upload
  * debian/manpages added
  * debian/examples added
  * debian/info added
  * debian/rules rewritten, using dh7-style
  * debian/compat bumped to 7
  * debian/control:
    - Build-Depends, debhelper bumped to >= 7, quilt versioned
      to >= 0.46-7~
    - Depends, ${misc:Depends} added
    - Standards-Version bumped to 3.8.3:
      + handle install-info changes properly, add Depends on
        dpkg (>= 1.15.4) | install-info to permit smooth upgrades.
    - Vcs-* fields updated, packaging moved to Git
  * debian/README.source added

 -- David Paleino <d.paleino@gmail.com>  Mon, 21 Sep 2009 00:34:29 +0200

macchanger (1.5.0-3) unstable; urgency=low

  * debian/patches/:
    - 01-fix_manpage.patch updated, added -s|--show option.
      Thanks to Geoff Simmons (Closes: #506922)
  * debian/control:
    - DM-Upload-Allowed set.
  * debian/watch added
